[package]
name = "rowid"
version = "0.4.0"
authors = ["Alpheus Tang"]
edition = "2021"
description = """
A time-based unique ID solution
"""
readme = "README.md"
homepage = "https://github.com/alpheustangs/rowid.rs"
repository = "https://github.com/alpheustangs/rowid.rs"
license = "MIT"
keywords = [
    "rowid",
    "time",
    "unique",
    "id",
    "util",
]
categories = [
    "authentication",
    "data-structures",
]
include = [
    "src/*", 
    "Cargo.toml",
    "README.md",
]

[lib]
name = "rowid"
path = "src/lib.rs"

[dependencies]
rand = "~0.9.0"
